
option java_outer_classname="LockVerifyCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message LockVerifyCommand 
{
	optional string key = 1;
	optional int64 requestId = 2;
}